compiler/tests/fixtures/invalid/semantics/sifting_group_action_role_missing_pool.viv
// Group action role with n: but no is: or from: casting-pool directive

action foo:
    roles:
        @doer:
            as: initiator


pattern bad:
    roles:
        @p:
            as: character
    actions:
        @acts*:
            n: 2-5
